# DeepClean.Ai

./: .env.example  .gitignore  .vercelignore  ADVANCED_FEATURES.md  BACKEND_DEPLOYMENT.md  COMPLETE_PLATFORM_PLAN.md  COMPLETION_REPORT.md  CONNECT_BACKEND.ps1  DEPLOY.ps1  DEPLOYMENT.md  DESIGN_UPDATE_LOG.md  ERRORS_FIXED.md  LOGIN_FIX_SUMMARY.md  QUICK_DEPLOY.md  README.md  RESTART_ALL.ps1  START.ps1  START_PRODUCTION.ps1  STOP.ps1  STOP_SERVERS.ps1  SUCCESS.md  TEST_RENDER_BACKEND.ps1  UPDATE_AFTER_RENDER.ps1  docker-compose.yml  package-lock.json  package.json  vercel.json
backend/: .gitignore  Dockerfile  Dockerfile.worker  START_BACKEND.ps1  celery_config.py  create_users.py  main_api.py  mock_backend.py  nixpacks.toml  pyproject.toml  railway.toml  real_main.py  render.yaml  requirements-prod.txt  requirements.txt  requirements_stopncii.txt  simple_backend.py  simple_main.py  standalone.py  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_stopncii_platform.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  advanced_router.py  auth_router.py  routers.py  sessions_router.py  stopncii_router.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py
backend/app/models/: __init__.py  database.py  schemas.py  stopncii_models.py  stopncii_schemas.py
backend/app/services/: __init__.py  advanced_detectors.py  blockchain_evidence.py  deepfake_detection.py  deepfake_detectors.py  deepfake_tools.py  fusion_engine.py  ml_models.py  perceptual_hashing.py  real_detectors.py  (+1 more)
docs/: API.md  (+2 more)
(+128 files in other folders)
