[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepclean-api"
version = "1.0.0"
description = "DeepClean.AI Backend API for Deepfake Detection"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "PyJWT==2.8.1",
    "opencv-python-headless==4.8.1.78",
    "Pillow==10.1.0",
    "numpy==1.24.3",
    "python-dotenv==1.0.0"
]
